fix: overflow for mobile screen size

--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
 
 .App-main {
   box-sizing: border-box;
-  overflow: hidden;
+  overflow: auto;
   margin: auto;
   height: 80vh;
   padding: 20px 5%;
